[package]
name = "CS498-Tectonic-Simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0"}
bevy_save = { version = "0.14.0"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
